--- a/style.css
+++ b/style.css
@@ -68,3 +68,8 @@ table{margin:20px;}
     height:200px;
     margin-left:170px;
 }
+.produc{
+    background-color:rgba(205, 254, 156, 0.505);
+    width:400px;
+    height:400px;
+}
