--- a/style.css
+++ b/style.css
@@ -69,5 +69,6 @@ table{margin:20px;}
     margin-left:170px;
 }
 .produc{
-    height:200px;
+    height:400px; width:370px;
+    background-color:rgba(205, 254, 156, 0.505);
 }
